fix: fixed jwt service with nimbus